# ObjectFFI

./: .gitignore  CMakeLists.txt  main.c  myprogram
include/: core_object.h  core_objects.h  object.c  object.h  pycore_runtume.h  pymem.h
src/: main2.c  pytypes.c
